--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -28,118 +28,120 @@
 </div >
 <div class="container" >
   <form action="/student/save" data-th-object="${student}" method="post" >
-        <div class="form-group" data-th-if="${addStatus==false}" >
-        <label class="col-sm-3 control-label" data-th-for="${id}" >Index</label >
-        <div class="col-sm-9" >
-          <input type="text" readonly data-th-field="*{id}" id="id" placeholder="IndeX" class="form-control" autofocus >
+    <div class="form-group" data-th-if="${addStatus==false}" >
+      <label class="col-sm-3 control-label" data-th-for="${id}" >Index</label >
+      <div class="col-sm-9" >
+        <input type="text" readonly data-th-field="*{id}" id="id" placeholder="IndeX" class="form-control" autofocus >
+      </div >
+    </div >
+    <div class="form-group" data-th-if="${addStatus==false}" >
+      <label class="col-sm-2 control-label" data-th-for="${regNo}" >Registration ID</label >
+      <div class="col-sm-5" >
+        <input type="text" id="regNo" class="form-control" data-th-field="*{regNo}" >
+        <input type="text" class="form-control" data-th-field="*{liveDead}" hidden >
+      </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${firstName}" >First name</label >
+      <div class="col-sm-4" >
+        <input type="text" id="firstName" class="form-control" data-th-field="*{firstName}" >
+      </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${lastName}" >Last name</label >
+      <div class="col-sm-4" >
+        <input type="text" id="lastName" class="form-control" data-th-field="*{lastName}" >
+      </div >
+    </div >
+    <!--Gender-->
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${'gender'}" >Gender :</label >
+      <div class="col-sm-4" >
+        <div class="custom-control custom-checkbox custom-control-inline "
+             data-th-each="genders,index : ${gender}" >
+          <input class="custom-control-input gender" required
+                 data-th-name="${'gender'}"
+                 data-th-value="${genders}"
+                 data-th-id="${index.index}+${genders}" type="radio"
+                 data-th-checked="${genders==gender}" />
+          <label class="custom-control-label"
+                 data-th-for="${index.index}+${genders}"
+                 data-th-text="${genders.gender}" > radio
+          </label >
         </div >
       </div >
-      <div class="form-group" data-th-if="${addStatus==false}" >
-        <label class="col-sm-2 control-label" data-th-for="${regNo}" >Registration ID</label >
-        <div class="col-sm-5" >
-          <input type="text" id="regNo" class="form-control" data-th-field="*{regNo}" >
-          <input type="text" class="form-control" data-th-field="*{liveDead}" hidden >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${dob}" >Date of birth</label >
+      <div class="col-sm-4" >
+        <input type="date" id="dob" class="form-control" data-th-field="*{dob}" >
       </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${firstName}" >First name</label >
-        <div class="col-sm-4" >
-          <input type="text" id="firstName" class="form-control" data-th-field="*{firstName}" >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${address}" >Address</label >
+      <div class="col-sm-4" >
+        <textarea id="address" class="form-control" data-th-field="*{address}" ></textarea >
       </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${lastName}" >Last name</label >
-        <div class="col-sm-4" >
-          <input type="text" id="lastName" class="form-control" data-th-field="*{lastName}" >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${city}" >City</label >
+      <div class="col-sm-4" >
+        <input type="text" id="city" class="form-control" data-th-field="*{city}" >
       </div >
-      <!--Gender-->
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${'gender'}" >Gender :</label >
-        <div class="col-sm-4" >
-          <div class="custom-control custom-checkbox custom-control-inline "
-               data-th-each="genders,index : ${gender}" >
-            <input class="custom-control-input gender" required
-                   data-th-name="${'gender'}"
-                   data-th-value="${genders}"
-                   data-th-id="${index.index}+${genders}" type="radio"
-                   data-th-checked="${genders==gender}" />
-            <label class="custom-control-label"
-                   data-th-for="${index.index}+${genders}"
-                   data-th-text="${genders.gender}" > radio
-            </label >
-          </div >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-3 control-label" >School</label >
+      <div class="col-sm-9" >
+        <select id="school" class="form-control" data-th-field="*{school}" >
+          <option value="" selected disabled >Please select</option >
+          <option data-th-each="school : ${schools}"
+                  data-th-text="${school.name}"
+                  data-th-value="${school.id}" >
+          </option >
+        </select >
       </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${dob}" >Date of birth</label >
-        <div class="col-sm-4" >
-          <input type="date" id="dob" class="form-control" data-th-field="*{dob}" >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-1 control-label" data-th-for="${'grade'}" >Grade</label >
+      <div class="col-sm-5" >
+        <select id="grade" class="form-control" data-th-field="*{grade}" required >
+          <option value="" >Select the Grade</option >
+          <option data-th-each="grade : ${grades}"
+                  data-th-text="${grade.grade}"
+                  data-th-value="${grade}" ></option >
+        </select >
       </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${address}" >Address</label >
-        <div class="col-sm-4" >
-          <textarea id="address" class="form-control" data-th-field="*{address}" ></textarea >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${mobile}" >Mobile number</label >
+      <div class="col-sm-4" >
+        <input type="tel" id="mobile" class="form-control" data-th-field="*{mobile}" >
       </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${city}" >City</label >
-        <div class="col-sm-4" >
-          <input type="text" id="city" class="form-control" data-th-field="*{city}" >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${home}" >Fixed number</label >
+      <div class="col-sm-4" >
+        <input type="tel" id="home" class="form-control" data-th-field="*{home}" >
       </div >
-      <div class="form-group" >
-        <label class="col-sm-3 control-label" >School</label >
-        <div class="col-sm-9" >
-          <select id="school" class="form-control" data-th-field="*{school}" >
-            <option value="" selected disabled >Please select</option >
-            <option data-th-each="school : ${schools}"
-                    data-th-text="${school.name}"
-                    data-th-value="${school.id}" >
-            </option >
-          </select >
-        </div >
+    </div >
+    <div class="form-group" >
+      <label class="col-sm-2 control-label" data-th-for="${guardian}" >Guardian's name</label >
+      <div class="col-sm-4" >
+        <input type="text" id="guardian" class="form-control" data-th-field="*{guardian}" >
       </div >
-      <div class="form-group" >
-        <label class="col-sm-1 control-label" data-th-for="${'grade'}" >Grade</label >
-        <div class="col-sm-5" >
-          <select id="grade" class="form-control" data-th-field="*{grade}" required >
-            <option value="" >Select the Grade</option >
-            <option data-th-each="grade : ${grades}"
-                    data-th-text="${grade.grade}"
-                    data-th-value="${grade}" ></option >
-          </select >
-        </div >
-      </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${mobile}" >Mobile number</label >
-        <div class="col-sm-4" >
-          <input type="tel" id="mobile" class="form-control" data-th-field="*{mobile}" >
-        </div >
-      </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${home}" >Fixed number</label >
-        <div class="col-sm-4" >
-          <input type="tel" id="home" class="form-control" data-th-field="*{home}" >
-        </div >
-      </div >
-      <div class="form-group" >
-        <label class="col-sm-2 control-label" data-th-for="${guardian}" >Guardian's name</label >
-        <div class="col-sm-4" >
-          <input type="text" id="guardian" class="form-control" data-th-field="*{guardian}" >
-        </div >
-      </div >
+    </div >
 
     <div class="form-row" >
-      <div class="form-group">
+      <div class="form-group" >
         <label class="col-sm-1 control-label" data-th-for="${'batches'}" >Batches:</label >
-        <div class="col-sm-10" >
+        <div class="col-sm-7" >
           <select id="batches" class="form-control col-sm-10" data-th-field="*{batches}" multiple required >
 
           </select >
         </div >
-      </div>
+        <label class="col-sm-4 control-label" >Total Fee for Month : <input id="monthFee" value="0" class="form-control"
+                                                                            readonly /></label >
+      </div >
     </div >
 
     <div class="row container-fluid" >
@@ -169,14 +171,14 @@
 <script src="/js/jquery.quickSearch.js" ></script >
 
 <script >
+    let totalPrice = 0;
     $("#grade").change(function () {
         $.ajax({
             type: 'GET',
             url: $("#batchUrl").val() + $(this).val(),
             success: function (resp) {
-                let html = '';
                 for (let k = 0; resp.length > k; k++) {
-                    $("#batches").multiSelect('addOption', { value: `${resp[k].id}`, text: `${resp[k].name}`, index: 0 });
+                    $("#batches").multiSelect('addOption', {value: `${resp[k].id}`, text: `${resp[k].name}`, index: 0});
                 }
             },
             error: function (err) {
@@ -184,16 +186,35 @@
             }
         });
     });
-
     $('#batches').multiSelect({
-        selectableHeader: "<div class='control-label'>Available Batches</div>",
-        selectionHeader: "<div class='custom-header'>Selected  Batches</div>",
-        afterSelect: function(values){
-            alert("Select value: "+values);
+        selectableHeader: "<div class='control-label bg-info h3'>Available Batches</div>",
+        selectionHeader: "<div class='control-label bg-info h3'>Selected  Batches</div>",
+        afterSelect: function (values) {
+            $.ajax({
+                type: 'GET',
+                url: $("#batchUrl").val() + "id/" + values,
+                success: function (resp) {
+                    totalPrice += parseInt(resp.fee);
+                    $("#monthFee").val(totalPrice);
+                },
+                error: function (err) {
+                    console.log(err);
+                }
+            });
         },
-        afterDeselect: function(values){
-            alert("Deselect value: "+values);
-        }
+        afterDeselect: function (values) {
+            $.ajax({
+                type: 'GET',
+                url: $("#batchUrl").val() + "id/" + values,
+                success: function (resp) {
+                    totalPrice -= parseInt(resp.fee);
+                    $("#monthFee").val(totalPrice);
+                },
+                error: function (err) {
+                    console.log(err);
+                }
+            });
+        },
     });
 
 
