Student count show in student batch is completed

--- a/src/main/resources/templates/batchStudent/batchStudent.html
+++ b/src/main/resources/templates/batchStudent/batchStudent.html
@@ -51,7 +51,7 @@
           <th   data-th-text="${rowCount.count}" ></th >
           <th   data-th-text="${batch.code}" ></th >
           <th   data-th-text="${batch.name}" ></th >
-          <th   data-th-text="${batch.teacher.name}" ></th >
+          <th   data-th-text="${batch.teacher.firstName}" ></th >
           <th   data-th-text="${batch.count}" ></th >
           <th >
             <a   data-th-href="${'/batchStudent/batch/' + batch.id}" class="btn btn-outline-secondary btn-sm" >&nbsp;Add Student</a >
