--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -22,7 +22,7 @@
     </a></div>
 </div>
 
-<div class="container-fluid row">
+<div class="container-fluid row" data-th-fragment="studentsFragment">
     <div class="col-lg-1"></div>
     <div class="col-lg-10">
         <table class="table table-striped table-inverse table-responsive container" id="myTable"  >
