--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -81,7 +81,7 @@
         </div>
     </div>
 </div>
-<div id="message"   data-th-if="${message}" th:class="${'alert alert-dismissable' + alertClass}">
+<div id="message"   data-th-if="${message}" data-th-class="${'alert alert-dismissable' + alertClass}">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     <strong> <span id="messageNote"   data-th-text="${message}"></span></strong>
 </div>
