--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -127,20 +127,70 @@
         <input type="text" id="guardian" class="form-control" data-th-field="*{guardian}" >
       </div >
     </div >
+    <div class="form-group" >
+      <label class="col-sm-1 control-label" data-th-for="${'batches'}" >Available Batches</label >
+      <div class="col-sm-5" >
+        <select id="batches" class="form-control" required >
+          <option value="" >Choose</option >
 
-    <div class="form-row" >
-      <div class="form-group" >
-        <label class="col-sm-1 control-label" data-th-for="${'batches'}" >Batches:</label >
-        <div class="col-sm-7" >
-          <select id="batches" class="form-control col-sm-10" data-th-field="*{batches}" multiple required >
-            <option data-th-each="batch : ${batches}" ></option >
-          </select >
-        </div >
-        <label class="col-sm-4 control-label" >Total Fee for Month : <input id="monthFee" value="0" class="form-control"
-                                                                            readonly /></label >
+        </select >
       </div >
     </div >
+    <div class="form-row col-md-12 col-sm-12 mt-4 text-center" >
+      <!--Selected Batch-->
+      <div class="container-fluid" >
+        <table class="table table-striped table-inverse" id="selectedBatchInTable" >
+          <legend ><strong > <i >Selected Batches </i ></strong ></legend >
+          <thead class="thead-inverse" >
+          <tr >
+            <th >Index</th >
+            <th >Batch Name</th >
+            <th >Active or Inactive</th >
+            <th >Modify</th >
+          </tr >
+          </thead >
+          <tbody >
+          <tr data-th-each="batchStudent, index : ${student.batchStudents}" data-th-if="${supplierItemEdit}" >
+            <td >
+              <strong > <span data-th-text="${index.count}" ></span ></strong >
+            </td >
+            <td >
+              <strong >
+                <span class="control-label" data-th-text="${batchStudent.batch.name}" ></span >
+              </strong >
+              <input type="hidden" data-th-value="${batchStudent.batch.id}"
+                     data-th-name="${'batchStudents[__${index.index}__].batch.id'}" >
+              <input type="hidden" data-th-value="${batchStudent.id}"
+                     data-th-name="${'batchStudents[__${index.index}__].id'}" >
+              <input type="hidden" data-th-value="${batchStudent.student.id}"
+                     data-th-name="${'batchStudents[__${index.index}__].student.id'}" >
+            </td >
+            <td >
+            </td >
+            <td >
+              <!--Radio button-->
+              <div class="col" >
+                <div class="custom-control custom-checkbox custom-control-inline "
+                     data-th-each="liveDead : ${liveDeads}" >
+                  <input class="custom-control-input liveDead" required
+                         data-th-name="${'batchStudents[__${index.index}__].liveDead'}"
+                         data-th-value="${liveDead}"
+                         data-th-id="${index.index}+${liveDead}" type="radio"
+                         data-th-checked="${liveDead==batchStudent.liveDead}" />
+                  <label class="custom-control-label"
+                         data-th-for="${index.index}+${liveDead}"
+                         data-th-text="${liveDead.liveDead}" > radio
+                  </label >
+                </div >
+              </div >
+            </td >
 
+          </tr >
+          </tbody >
+        </table >
+      </div >
+
+    </div >
     <div class="row container-fluid" >
       <div class="col-sm-2 col-sm-offset-2" >
         <button type="link" class="btn btn-danger btn-block" >Back</button >
@@ -155,9 +205,92 @@
       </div >
     </div >
   </form >
+
   <!-- /form -->
   <input type="hidden" id="batchUrl" data-th-value="${batchUrl}" >
 </div >
+<div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
+<div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
+<script >
 
+    $("#grade").change(function () {
+        $.ajax({
+            type: 'GET',
+            url: $("#batchUrl").val() + $(this).val(),
+            success: function (resp) {
+                for (let i = 0; i < resp.length; i++) {
+                    $("#batches").append(new Option(resp[i].name, resp[i].id));
+                }
+            },
+            error: function (err) {
+                console.log(err);
+            }
+        });
+    })
+
+    //add new item and price
+    $("#batches").bind('change', function () {
+        let valueA = optionElementRemove("#batches");
+        tableRowAdd(valueA);
+    });
+    //table row remove
+    let tableRowRemove = function (obj) {
+
+        let itemIndex = obj.parentNode.parentNode.rowIndex;
+        let itemSelected = document.getElementById("selectedBatchInTable").rows.item(itemIndex).cells;
+
+        let removeItemValue = itemSelected[1].childNodes[1].nextSibling.nextSibling.attributes.value.nodeValue;
+        let removeItemText = itemSelected[1].childNodes[1].firstChild.nodeValue;
+
+        $("#batches").append(new Option(removeItemText, removeItemValue));
+        let removeRow = `#selectedBatchInTable tr:eq(${itemIndex})`
+        $(removeRow).remove();
+
+
+    }
+    //option tag remove
+    let optionElementRemove = function (id) {
+        let selectedValue = $(id).val();
+        let selectedItemId = `${id} option[value='${selectedValue}']`;
+        let selectedValueInnerHTML = $(selectedItemId).html();
+        $(selectedItemId).remove();
+        return {name: selectedValueInnerHTML, value: selectedValue};
+    }
+    //table row add
+    let tableRowAdd = function (value) {
+        let rows = $("#selectedBatchInTable tr").length;
+        let supplierId = $("#supplierId").val();
+        let rowCount = rows - 1;
+        // let rowCount = itemCount + 1;
+
+        let html = `<tr>
+                        <td>${rows}</td>
+                        <td>
+                            <span>${value.name}</span>
+                            <input type="hidden" name="batchStudents[${rowCount}].id" value="">
+                            <input type="hidden" name="batchStudents[${rowCount}].batch.id" value="${value.value}">
+                        </td>
+                        <td>
+  <div class="custom-control custom-checkbox custom-control-inline " >
+    <input class="custom-control-input" required   id="${rowCount}+ACTIVE"        name="batchStudents[${rowCount}].liveDead"           value="ACTIVE" type="radio"/>
+    <label class="custom-control-label"           for="${rowCount}+ACTIVE">Active    </label >
+        </div>
+        <div class="custom-control custom-checkbox custom-control-inline " >
+      <input class="custom-control-input" required id="${rowCount}+STOP"           name="batchStudents[${rowCount}].liveDead"           value="STOP" type="radio"/>
+    <label class="custom-control-label"           for="${rowCount}+STOP">Deactive    </label >
+  </div >
+                        </td>
+
+                        <td>
+                            <button type="button" class="btn btn-outline-danger" onclick="tableRowRemove(this)">Remove</button>
+                        </td>
+                    </tr>`;
+
+        $("#selectedBatchInTable tr:last").after(html);
+
+    }
+
+
+</script >
 </body >
 </html >
